change to cpp file

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -34,11 +34,10 @@ add_library( # Sets the name of the library.
             src/main/cpp/video_filter.c
             src/main/cpp/fast_start.c
             src/main/cpp/ffprobe_cmd.cpp
-            src/main/cpp/visualizer/fft.c
-        src/main/cpp/visualizer/fixed_fft.c
+            src/main/cpp/visualizer/fft.cpp
             src/main/cpp/visualizer/block_queue.c
-        src/main/cpp/visualizer/execute_fft.c
-            src/main/cpp/visualizer/window.c
+            src/main/cpp/visualizer/execute_fft.cpp
+            src/main/cpp/visualizer/window.cpp
         )
 
 add_library( ffmpeg
