--- a/app/src/main/cpp/sox/CmakeLists.txt
+++ b/app/src/main/cpp/sox/CmakeLists.txt
@@ -106,7 +106,6 @@ set(formats_srcs
         g723_40.c
         g72x.c
         g72x.h
-        gsm.c
         gsrt.c
         hcom.c
         htk.c
@@ -114,7 +113,7 @@ set(formats_srcs
         ima_rw.h
         ima_rw.c
         la-fmt.c
-        lpc10.c
+#        lpc10.c
         lu-fmt.c
         maud.c
         nulfile.c
