Revert "remove u1-fmt.c"

--- a/app/src/main/cpp/sox/CmakeLists.txt
+++ b/app/src/main/cpp/sox/CmakeLists.txt
@@ -110,6 +110,11 @@ set(formats_srcs
         s3-fmt.c
         s4-fmt.c
         sox-fmt.c
+        u1-fmt.c
+        u2-fmt.c
+        u3-fmt.c
+        u4-fmt.c
+        ul-fmt.c
         voc.c
         vox.c
         vox.h
