change ffmpeg.c to ffmpeg.cpp

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library( # Sets the name of the library.
              # Provides a relative path to your source file(s).
 
             src/main/cpp/ffmpeg/cmdutils.c
-            src/main/cpp/ffmpeg/ffmpeg.c
+        src/main/cpp/ffmpeg/ffmpeg.cpp
             src/main/cpp/ffmpeg/ffmpeg_filter.c
             src/main/cpp/ffmpeg/ffmpeg_opt.c
             src/main/cpp/ffmpeg_cmd.c
