--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -50,8 +50,8 @@ set_target_properties( ffmpeg
                        ../../../../libs/${CMAKE_ANDROID_ARCH_ABI}/libffmpeg.so )
 
 # third-party library: sox
-add_subdirectory(src/main/cpp/sox)
-include_directories(src/main/cpp/sox)
+#add_subdirectory(src/main/cpp/sox)
+#include_directories(src/main/cpp/sox)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 
@@ -72,7 +72,7 @@ find_library( # Sets the name of the path variable.
 target_link_libraries( # Specifies the target library.
                        media-handle
                        ffmpeg
-                       sox
+#                       sox
                        -landroid #native_window
                        -ljnigraphics #bitmap
                        -lOpenSLES #openSLES
