--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <application
         android:name=".FFmpegApplication"
-        android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -32,29 +32,23 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- audio handle -->
-        <activity android:name=".activity.AudioHandleActivity" /> <!-- media handle -->
-        <activity android:name=".activity.MediaHandleActivity" /> <!-- video handle -->
-        <activity android:name=".activity.VideoHandleActivity" /> <!-- media player -->
-        <activity
-            android:name=".activity.MediaPlayerActivity"
-            android:screenOrientation="landscape" /> <!-- local pusher -->
-        <activity android:name=".activity.PushActivity" /> <!-- real time pusher -->
+        </activity>
+        <activity android:name=".activity.AudioHandleActivity" />
+        <activity android:name=".activity.MediaHandleActivity" />
+        <activity android:name=".activity.VideoHandleActivity" />
+        <activity android:name=".activity.PushActivity" />
         <activity
             android:name=".activity.LiveActivity"
-            android:screenOrientation="portrait" /> <!-- filter effect -->
+            android:screenOrientation="landscape" />
         <activity
             android:name=".activity.FilterActivity"
-            android:screenOrientation="landscape" /> <!-- video preview -->
+            android:screenOrientation="landscape" />
         <activity
-            android:name=".activity.VideoPreviewActivity"
-            android:screenOrientation="portrait" /> <!-- probe media format -->
+            android:name=".activity.VideoPreviewActivity" />
         <activity
-            android:name=".activity.ProbeFormatActivity"
-            android:screenOrientation="portrait" />
+            android:name=".activity.ProbeFormatActivity" />
         <activity
-            android:name=".activity.AudioEffectActivity"
-            android:screenOrientation="portrait" />
+            android:name=".activity.AudioEffectActivity" />
         <activity android:name=".activity.AudioPlayActivity" />
         <activity android:name=".activity.EqualizerActivity" />
     </application>
