--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ android {
         exclude 'META-INF/proguard/coroutines.pro'
         pickFirst 'lib/armeabi-v7a/libmp3lame.so'
         pickFirst 'lib/arm64-v8a/libmp3lame.so'
+        pickFirst 'lib/armeabi-v7a/libffmpeg.so'
+        pickFirst 'lib/arm64-v8a/libffmpeg.so'
     }
 }
 
