--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        compose_version = '1.0.1'
+    }
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
@@ -8,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,10 +29,10 @@ task clean(type: Delete) {
 }
 
 ext {
-    compileSdkVersion = 28
-    buildToolsVersion = '28.0.2'
+    compileSdkVersion = 31
+    buildToolsVersion = '31.0.2'
     minSdkVersion = 21
-    targetSdkVersion = 28
+    targetSdkVersion = 31
     versionCode = 103000
     versionName = "1.3.0"
 }
