--- a/Live/build.gradle
+++ b/Live/build.gradle
@@ -4,7 +4,6 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-//        applicationId "com.frank.live"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
@@ -15,7 +14,7 @@ android {
             }
         }
         ndk{
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters /*"armeabi-v7a",*/ "arm64-v8a"
         }
     }
     buildTypes {
