--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library( # Sets the name of the library.
             src/main/cpp/metadata/ffmpeg_media_retriever.c
             src/main/cpp/yuv/yuv_converter.cpp
             src/main/cpp/media_transcode.cpp
+            src/main/cpp/audio_resample.cpp
         )
 
 add_library( ffmpeg
