Feature: add pcm processor

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library( # Sets the name of the library.
             src/main/cpp/yuv/yuv_converter.cpp
             src/main/cpp/media_transcode.cpp
             src/main/cpp/audio_resample.cpp
+            src/main/cpp/pcm/pcm_process.cpp
         )
 
 add_library( ffmpeg
