--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -46,6 +46,8 @@ add_library( # Sets the name of the library.
         ff_audio_resample.cpp
         pcm/pcm_process.cpp
         common_media_jni.cpp
+        ff_audio_player.cpp
+        audio_player_jni.cpp
         )
 
 add_library( ffmpeg
