--- a/AndroidMedia/build.gradle
+++ b/AndroidMedia/build.gradle
@@ -2,7 +2,7 @@
 apply plugin: 'com.android.library'
 //apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
