fix: compile on arm32 failed

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -81,10 +81,12 @@ include_directories(metadata)
 include_directories(ffplayer)
 
 if(${CMAKE_ANDROID_ARCH_ABI} MATCHES "armeabi-v7a")
-    include_directories(include/armeabi-v7a)
+    include_directories(include/armeabi-v7a/libavcodec)
+    include_directories(include/armeabi-v7a/libavutil)
     message("This is armeabi-v7a")
 elseif(${CMAKE_ANDROID_ARCH_ABI} MATCHES "arm64-v8a")
-    include_directories(include/arm64-v8a)
+    include_directories(include/arm64-v8a/libavcodec)
+    include_directories(include/arm64-v8a/libavutil)
     message("This is arm64-v8a")
 endif()
 
