update gradle to 8.8.0

--- a/AndroidMedia/build.gradle
+++ b/AndroidMedia/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
+    namespace "com.frank.androidmedia"
 
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
@@ -25,6 +26,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 }
 
