player: add interface of player

--- a/NextPlayer/build.gradle
+++ b/NextPlayer/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     compileSdk 34
-    namespace "com.frank.playengine"
+    namespace "com.frank.next"
 
     defaultConfig {
         minSdk 21
